--- a/templates/connexion.html
+++ b/templates/connexion.html
@@ -36,7 +36,7 @@
                                 <input type="checkbox" class="form-check-input" id="rememberMe">
                                 <label class="form-check-label" for="rememberMe">Se souvenir de moi</label>
                             </div>
-                            <a href="#" class="text-primary">Mot de passe oublier?</a>
+                            <a href="/forgot_password" class="text-primary">Mot de passe oublié?</a>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Se Connecter</button>
                         <button type="button" class="btn btn-outline-primary btn-block mt-2">
