--- a/templates/base.html
+++ b/templates/base.html
@@ -140,7 +140,7 @@
                         {% endif %}
                     </a>
                 </li>
-                <li><a href="#" class="d-flex align-items-center text-dark"><i class="material-icons-outlined">group</i> Mes Groupes</a></li>
+                <li class="{% if request.endpoint == 'groupes' %}active{% endif %}"><a href="{{ url_for('groupes') }}" class="d-flex align-items-center text-dark"><i class="material-icons-outlined">group</i> Mes Groupes</a></li>
                 <li class="{% if request.endpoint == 'parametre' %}active{% endif %}"><a href="{{ url_for('parametre') }}" class="d-flex align-items-center text-dark"><i class="material-icons-outlined">settings</i> Parametre</a></li>
             </ul>
             
