--- a/templates/project.html
+++ b/templates/project.html
@@ -63,7 +63,14 @@
                                         {% endif %}
                                     </p>
                                     <div class="progress" style="height: 5px;">
-                                        <div class="progress-bar bg-success" role="progressbar" style="width: 65%;" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-success" role="progressbar" 
+                                             style="width: {{ project.progress }}%;" 
+                                             aria-valuenow="{{ project.progress }}" 
+                                             aria-valuemin="0" 
+                                             aria-valuemax="100"></div>
+                                    </div>
+                                    <div class="d-flex justify-content-end mt-1">
+                                        <span class="text-muted" style="font-size: 0.7rem;">{{ project.progress }}% complété</span>
                                     </div>
                                 </div>
                             </div>
