Update navigation icon and label for messaging section in base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -395,7 +395,7 @@
                 </li>
                 <li class="{% if request.endpoint == 'groupes' %}active{% endif %}">
                     <a href="{{ url_for('groupes') }}" class="d-flex align-items-center">
-                        <i class="material-icons-outlined">group</i> Mes Groupes
+                        <i class="material-icons-outlined">chat</i> Messagerie
                     </a>
                 </li>
                 <li class="{% if request.endpoint == 'parametre' %}active{% endif %}">
